--- a/reepay-js-example-simple/src/index.html
+++ b/reepay-js-example-simple/src/index.html
@@ -161,8 +161,8 @@
                     // handle error using err.code and err.fields
                 } else {
                   // A token has been returned. The field with attribute `data-reepay="token"` has automaticly been filled out with the token
-                  alert("Token generated: " + token)
-                  console.log("Token generated: " + token);
+                  alert("Token generated: " + token.id)
+                  console.log("Token generated: " + token.id);
                 }
             });
         });
