Privatized all functions except the ones the customer can call

--- a/reepay-js-example-simple/src/index2.html
+++ b/reepay-js-example-simple/src/index2.html
@@ -166,12 +166,13 @@
                 cvc: '***'
             }
 		});
+        rep = reepay_utils({
+            inputClass: ".customer_info",
+            cardnumberField: "#cardnumber"
+        });
 
-		reepay_util.validate(".customer_info");
-		reepay_util.generate({
-			firstName: false
-		});
-		console.log(reepay_util.form.settings.fields);
+        rep.validate();
+		
 
 	</script>
 </body>
