--- a/reepay-js-example-simple/src/index2.html
+++ b/reepay-js-example-simple/src/index2.html
@@ -171,10 +171,7 @@
 
         // Make a new ReepayUtils object with your desired settings
         var rep = new ReepayUtils({
-            inputClass: ".customer_info",
-            cardnumberField: "#cardnumber",
-            expiryField: "#expiry",
-            cvvField: "#cvc"
+            cvvId: "#cvc"
         });
         // Validate that everything has been filled out correctly.
         rep.validate();
