--- a/reepay-js-example-simple/src/index.html
+++ b/reepay-js-example-simple/src/index.html
@@ -1,172 +1,182 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
-    <title>Reepay JS simple example</title>
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/app.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
-    <meta name="viewport" content="initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Reepay sign-up page example</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/app.css">
+
 </head>
-
 <body>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-3"></div>
+			<div class="col-md-6">
+				<section class="panel panel-default portlet-item">
+                <header class="panel-heading">
+                    <h2 class="panel-title">Sign-up</h2>
+                </header>
+                	<section class="panel-body">
+                	<h4>Subscription</h4>
+                	<div class="row">
+                		<div class="col-sm-12">
+                			<p>Product goes here!</p>
+                		</div>
+                		<div class="col-sm-12">
+                			<p>Please enter your information here</p>
+                		</div>
+                	</div>
 
-    <div class="container-fluid" style="max-width: 500px">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="panel panel-default paybox">
-                    <img src="images/logo.png" width="100%">
-                    <div class="panel-body belt">
-                        <div class="pull-left beltelements">
-                            <h4>Company inc.</h4>
-                        </div>
-                        <div class="pull-right beltelements">
-                            <h4><span class="label label-info">$ 20.99/ month</span></h4>
-                        </div>
-                    </div>
-                    <div class="card-wrapper clearfix"></div>
-                    <div class="panel-body">
-                        <form id="form1">
-                            <div class="form-group">
+               <form id="paymentform" role="form" method="post" type="submit" action="signup.php">
+                            <article class="media" id="paymentinfo">
+                                <h4>Personal information</h4>
+
+                                <div class="alert alert-danger" style="display: none" id="customer_error">
+                                    <i class="fa fa-ban-circle"></i>
+                                    <strong id="customer_error_headline">Oh snap!</strong>
+                                    <p id="customer_error_message"></p>
+                                </div>
+
                                 <div class="row">
-                                    <div class="col-xs-6">
-                                        <label>Firstname</label>
-                                        <!---
-                                          Example of custom application needed data. This data could already exist in the backend, and is not always required
-                                        !--->
-                                        <input class="form-control" type="text" name="first_name"/>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label class="control-label">First name</label>
+                                            <input type="text" class="form-control customer_info" name="first_name" required="required" placeholder="First name">
+                                        </div>
                                     </div>
-                                    <div class="col-xs-6">
-                                        <label>Lastname</label>
-                                        <!---
-                                          Example of custom application needed data. This data could already exist in the backend, and is not always required
-                                        !--->
-                                        <input class="form-control" type="text" name="last_name"/>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label class="control-label">Last name</label>
+                                            <input type="text" class="form-control customer_info" name="last_name" required="required" placeholder="Last name">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
+
                                 <div class="row">
-                                    <div class="col-xs-12">
-                                        <label>Credit Card Number</label>
-                                        <!--
-                                        The `data-reepay="cardnumber"` tells reepay.js that this contantains the cardnumber.
-                                        No name attribute is added, this secure that the PAN is not send to the backend server together with the request.
-                                        !-->
-                                        <input placeholder="" class="form-control" type="text" data-reepay="number" id="number" style="padding-left:60px;">
-                                        <span class="card-icon icon-card__generic"></span>
-                                        <span class="glyphicon glyphicon-lock lock-icon"></span>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label class="control-label">Email</label>
+                                            <input type="text" class="form-control customer_info" name="email" required="required" placeholder="Email">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <label>Exp. month</label>
-                                        <!--
-                                        The `data-reepay="month"` tells reepay.js that this contantains the card expiry month.
-                                        !-->
-                                        <input class="form-control" type="text" data-reepay="month" id="month" />
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <label>Exp. year</label>
-                                        <!--
-                                        The `data-reepay="year"` tells reepay.js that this contantains the card expiry year.
-                                        !-->
-                                        <input class="form-control" type="text" data-reepay="year" id="year" />
+
+                                <h4>Payment information</h4>
+
+                                <div class="alert alert-danger" style="display: none" id="error">
+                                    <i class="fa fa-ban-circle"></i>
+                                    <strong id="error_headline">Oh snap!</strong>
+                                    <p id="error_message"></p>
+                                </div>
+                                <div class="media-body">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="form-group" id="form-group-cardnumber">
+                                                <label class="control-label">Card number</label>
+                                                <input type="text" class="form-control" placeholder="Enter cardnumber" id="cardnumber">
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-5">
+                                                    <div class="form-group" id="form-group-exp">
+                                                        <label class="control-label">Expiry date</label>
+                                                        <input type="text" class="form-control" placeholder="MM/YY" id="expiry">
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-1"></div>
+                                                <div class="col-sm-7">
+                                                    <div class="form-group" id="form-group-cvc">
+                                                        <label class="control-label">CVV</label>
+                                                        <input type="text" class="form-control" placeholder="CVV" id="cvc">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div id="terms-group" class="form-group">
+                                                <div class="checkbox">
+                                                    <label>
+                                                    <input type="checkbox" id="terms"/>
+                                                    I accept
+                                                    <a href="#" data-toggle="modal" data-target="#myModal">the terms.</a>
+                                                </label>
+                                                </div>
+                                            </div>
+                                            <input type="hidden" id="token" name="reepay-token" data-reepay="token">
+                                            <button class="btn btn-s-md btn-primary" style="width:100%" data-loading-text="sending..." id="savebutton">Sign-up
+                                        </button>
+
+
+                                        </div>
+                                        <div class="col-sm-6 hidden-xs" id="card-container"></div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col-xs-4">
-                                        <label>CVC</label>
-                                        <!--
-                                        The `data-reepay="cvv"` tells reepay.js that this contantains the card cvv.
-                                        !-->
-                                        <input class="form-control" type="text" data-reepay="cvv" id="cvv" />
-                                    </div>
-                                </div>
-                            </div>
-                            <!--
-                            This field `data-reepay="token"` will automaticly be filled out for the backend to use, after reepay.token has been called and a card token has been created.
-                            !-->
-                            <input type="hidden" name="token" data-reepay="token">
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col-xs-12">
-                                        <button type="submit" class="btn btn-success pull-right" style="width:100%;margin-top:15px;">Sign up</button>
-                                    </div>
-                                </div>
-                            </div>
+                            </article>
                         </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="https://js.reepay.com/v1/reepay.min.js"></script>
-    <script>
-        reepay.configure('{{PUBLIC_KEY}}');
+                        <article class="media" id="paymentinfo_success" style="display: none">
+                            <div class="media-body" style="height: 200px;">
+                                <p></p>
 
-        // Format and show the cardnumber in a more user friendly way
-        reepay.validate.formatCardNumber("#number", function (str) {
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="box">
+                                            <div class="box-icon">
+                                                <span class="fa fa-4x fa-check"></span>
+                                            </div>
+                                            <div class="info">
+                                                <h5 class="text-center">You are now signed up</h5>
+                                            </div>
+                                        </div>
 
-          // The cardtype is returned and can be visualized
-            if ((str.type == 'default') || (str.type == 'unknown')) {
-                $('.card-icon').addClass('icon-card__generic');
-                $('.card-icon').removeClass('icon-card__visa icon-card__mastercard icon-card__amex icon-card__visa discover');
-            } else {
-                $('.card-icon').removeClass('icon-card__generic icon-card__visa icon-card__mastercard icon-card__amex icon-card__visa discover');
-                $('.card-icon').addClass('icon-card__' + str.type);
+                                    </div>
+                                    <div class="col-sm-6 hidden-xs"></div>
+                                </div>
+                            </div>
+                        </article>
+                	</section>
+                </section>
+			</div>
+		</div>
+		<div class="row">
+			<div id="#formcontainer"></div>
+		</div>
+
+	</div>
+	<script src="js/jquery.min.js"></script>
+    <script src="js/button.js"></script>
+    <script src="js/jquery.card.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/texts.js"></script>
+    <script src="https://js.reepay.com/v1/reepay.js"></script>
+    <script type="text/javascript" src="js/utility.js"></script>
+
+	<script>
+		$("#paymentform").card({
+			container: '#card-container',
+            formSelectors: {
+                numberInput: 'input#cardnumber',
+                expiryInput: 'input#expiry',
+                cvcInput: 'input#cvc',
+                nameInput: 'input#name'
+            },
+            values: {
+                number: '**** **** **** ****',
+                expiry: '**/**',
+                cvc: '***'
             }
+		});
+        // Configure the Reepay library with your public key.
+        reepay.configure("{{PUBLIC_KEY}}");
 
+        // Make a new ReepayUtils object with your desired settings
+        var rep = new ReepayUtils({
+            cvvId: "#cvc"
         });
+        // Validate that everything has been filled out correctly.
+        rep.validate();
+        // Handles the submission of the form.
+        rep.reepaySubmit();
 
-
-        $('#form1').on('submit', function (event) {
-
-          // Prevent the form's default action, so that this can be handled after a token has been created.
-            event.preventDefault();
-
-            // Validate if the cardnumber's format is valid before posting
-            if(!reepay.validate.cardNumber($("#number").val())){
-              alert("Card number is invalid");
-              return;
-            }
-
-            // Validate if the expiry date's format is valid before posting
-            if(!reepay.validate.expiry($("#month").val(),$("#year").val())){
-              alert("expiry date is invalid");
-              return;
-            }
-
-            // Validate if the cvv's format is valid before posting
-            if(!reepay.validate.cvv($("#cvv").val())){
-              alert("CVV is invalid");
-              return;
-            }
-
-
-            var form = this;
-
-            // Create a token using the form data. This is not a synchronous operation,
-            // so a callback function is required to handle the error and submit the form
-            reepay.token(form, function (err, token) {
-
-                if (err) {
-                  // The error object and values are decribed in the documentation `https://docs.reepay.com/js/#errors`
-                  alert("Error: " + err)
-                   console.log(err);
-                    // handle error using err.code and err.fields
-                } else {
-                  // A token has been returned. The field with attribute `data-reepay="token"` has automaticly been filled out with the token
-                  alert("Token generated: " + token.id)
-                  console.log("Token generated: " + token.id);
-                }
-            });
-        });
-    </script>
+	</script>
 </body>
-
-</html>
