Renamed project folder

--- a/reepay-token-example/src/index.html
+++ b/reepay-token-example/src/index.html
@@ -95,7 +95,7 @@
                                 </div>
                                 <script src="https://token.reepay.com/token.js"
                                         class="reepay-button"
-                                        data-pubkey="{{you_publickey}}"
+                                        data-pubkey="{{public_key}}"
                                         data-text="Card information"
                                         data-locale="da">
                                 </script>
