--- a/reepay-token-example/src/index.html
+++ b/reepay-token-example/src/index.html
@@ -93,11 +93,12 @@
                                         <div class="col-sm-6 hidden-xs" id="card-container"></div>
                                     </div>
                                 </div>
-                                <script src="https://token.reepay.com/token.js"
+                                <script src="https://staging-token.reepay.com/token.js"
                                         class="reepay-button"
-                                        data-pubkey="{{your_publickeyhere}}"
+                                        data-pubkey="pub_b8cf2d23c4184ee28e1387303c2b0dd1"
                                         data-text="Card information"
-                                        data-locale="da">
+                                        data-locale="da"
+                                        data-baseurl="https://staging-token.reepay.com/">
                                 </script>
                             </article>
                         </form>
