--- a/reepay-token-example/src/index_advanced.html
+++ b/reepay-token-example/src/index_advanced.html
@@ -135,7 +135,7 @@
 
 <script>
     var handler = reepaytoken.configure({
-        key: '{{your_publickeyhere}}',
+        key: 'your_publickey_here',
         locale: 'da',
         cardToken: function(token) {
             console.log(token);
