Changed to reference token solution

--- a/reepay-token-example/src/custom_signup.html
+++ b/reepay-token-example/src/custom_signup.html
@@ -46,10 +46,9 @@
                 console.log(JSON.stringify(result));
                 document.querySelector('#token').value = result.token;''
                 // TODO: Validation how to
-                document.querySelector('#signupform').submit();
+                //document.querySelector('#signupform').submit();
             },
             ready: function(){
-                //document.querySelector('#signup-button').removeAttribute('disabled');                
                 document.querySelector('#signup-button').removeAttribute('disabled');                
             }
         });
