--- a/reepay-token-example/src/custom_signup.html
+++ b/reepay-token-example/src/custom_signup.html
@@ -19,16 +19,16 @@
     <h2>Personal information</h2>
     <form id="signupform" method="post" action="echo.php">
             <label>First name
-                <input type="text" name="first_name" required="required" placeholder="First name" autocomplete="given-name" />
+                <input type="text" name="first_name" required placeholder="First name" autocomplete="given-name" />
             </label>
             <label>Last name 
-                    <input type="text" name="last_name" required="required" placeholder="Last name" autocomplete="family-name" />
+                    <input type="text" name="last_name" required placeholder="Last name" autocomplete="family-name" />
             </label>           
             <label>Email
-                <input type="email" name="email" required="required" placeholder="Email" autocomplete="email" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,}"/>
+                <input type="email" name="email" required placeholder="Email" autocomplete="email" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,}"/>
             </label>
             <label>
-                    <input type="checkbox" id="terms" required="required"/>
+                    <input type="checkbox" id="terms" required/>
                     I accept
                     <a href="#" data-toggle="modal" data-target="#myModal">the terms.</a>
             </label>
