--- a/reepay-token-example/src/simple_signup.html
+++ b/reepay-token-example/src/simple_signup.html
@@ -16,7 +16,7 @@
     <p>Subscription product information here</p>
     
     <h2>Personal information</h2>
-    <form id="signupform" method="post" action="echo.php" onsubmit="console('Form validation code here');">
+    <form id="signupform" method="post" action="echo.php">
             <label>First name
                 <input type="text"  required="required" name="first_name" placeholder="First name" autocomplete="given-name" />
             </label>
