--- a/reepay-token-example/src/custom_charge.html
+++ b/reepay-token-example/src/custom_charge.html
@@ -57,13 +57,15 @@
                 document.querySelector('#token').value = result.token;
                 document.getElementById('submit-form').click();
             },
-            ready: function(){
+            ready: function() {
                 document.querySelector('#purchase-button').removeAttribute('disabled');                
+            },
+            close: function() {
+                console.log('modal closed');
             }
         });
 
         document.querySelector('#purchase-button').addEventListener('click', function(event) {
-
             var validated = true;
             var elements = form.querySelectorAll("[required]");
             for (i = 0; i < elements.length; i++) {
